fix: remove extra spacing at the bottom
and also some more ui fixes

--- a/css/main.css
+++ b/css/main.css
@@ -16,6 +16,7 @@ body,html {
   height: 100%;
 }
 
+
 .ak-fullscreen {
   min-height: 100%;
   width: 100%;
@@ -1318,6 +1319,7 @@ input[type=email],input[type=text],input[type=url] {
 }
 
 .pricing-heading {
+  padding-top: 20px;
   font-size: 24px;
   font-style: neosans;
 }
@@ -2931,7 +2933,9 @@ header, .main-nav-scrolled {
 }
 
 .footer-section2 {
-  margin-top: 10px
+  margin-top: 10px;
+  margin-bottom: -30px;
+  background-color: #02060C
 }
 
 .row {
